--- a/viewer.html
+++ b/viewer.html
@@ -20,7 +20,7 @@
             display: flex;
             flex-direction: column;
             height: 100vh;
-            background: var(--bg);
+            background: var(--bg-color);
             position: relative;
         }
 
@@ -42,6 +42,7 @@
 <body>
 
     <div class="viewer-page">
+
         <div class="viewer-body">
             <iframe id="pdfFrame" src=""></iframe>
         </div>
@@ -56,7 +57,8 @@
 
         if (file) {
             pdfFrame.src = file;
-            document.title = title || 'PDF Viewer';
+            const displayTitle = title || 'PDF Viewer';
+            document.title = displayTitle;
         } else {
             pdfFrame.style.display = 'none';
             document.body.innerHTML = '<p style="padding:20px">No file specified</p>';
