--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-    <div class="container">
+    <header class="header">
+        <h1>Semester Notes</h1>
+        <p>Select your semester to access papers & subjects</p>
+    </header>
 
-        <header>
-            <h1>Semester Notes</h1>
-            <p>Select your semester to access papers & subjects</p>
-        </header>
+    <div class="container">
 
         <main class="grid">
             <a href="subjects.html?sem=1" class="card">
