--- a/subjects.html
+++ b/subjects.html
@@ -27,7 +27,8 @@
     // COMMON SUBJECTS used across semesters
     const subjects = [
       "Physics", "Chemistry", "Mathematics", "Electronics",
-      "Zoology", "Botany", "Computer_Science", "English"
+      "Zoology", "Botany", "Computer_Science", "English",
+      "Sanskrit", "Statistics", "Gita", "Yoga-IKS", "SEC"
     ];
 
     // read sem param
